# husbando

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  style.md
doc/: Outline.txt  TuiOutline.txt
doc/wireframe/tui/: Index.txt  Notes.txt
res/config/: husbando.ini
src/: config.c  config.h  main.c
src/arc/ncurses/: element.c  element.h  ncurses.c  ncurses.h
src/arc/ssh/: ssh.c  ssh.h
src/arc/std/: errno.h
src/core/: controls.c  controls.h  core.c  core.h  episode.c  episode.h  player.h  provider.h  show.h
src/provider/allanime/: provider.c  provider.h
src/tui/: base.c  base.h  container.c  container.h  page.c  page.h
src/tui/pages/: index.c  index.h  search.c  search.h
src/video/cvlc/: player.c  player.h
src/video/mpv/: player.c  player.h
